--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>mornya.github.com</title>
   <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="anonymous">
-  <link rel="icon" href="https://mornya.com/favicon.ico">
-  <link rel="shortcut icon" href="https://mornya.com/favicon.ico" type="image/ico">
-  <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/ico">
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/pygment_trac.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/print.css" type="text/css" media="print">
   <link
     rel="preload"
     as="style"
